# dardar_tool

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
dardar_tool/: __init__.py  dardar_tool_main.py  pyproject.toml  setup.py
dardar_tool/main/download_function/: download_data_based_on_input.py
dardar_tool/main/other_tools/: data_manipulation_tools.py  plotting_functions.py
dardar_tool/main/validation_data_creator/: validation_data_creator_main.py
dardar_tool/source/: functions_dardar_validation.py
