[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dardar_tool"
version = "1.0.0"
description = "Python software tool for download dardar product and extract data from it."
requires-python = "==3.10.18"
dependencies = [
    "numpy==2.2.6",
    "matplotlib==3.10.3",
    "netCDF4==1.7.2",
    "cartopy==0.24.0",
    "cryptography==45.0.3",
    "paramiko==3.5.1",
    "cftime==1.6.4",
]
authors = [{name="Arttu Väisänen"}]
license = {text = ""}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dardar_tool", "dardar_tool.*"]

[tool.setuptools.package-data]
"dardar_tool.source" = ["*.nc"]